# digital-features-extractor

./: .gitignore  Architecture - Business & Digital feature definition.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-28-digital-feature-extractor-plan.md  2026-04-29-business-feature-grouping.md  2026-04-30-analysis-quality-improvements.md
docs/superpowers/specs/: 2026-04-28-digital-feature-extractor-design.md
src/: cli.py
src/extraction/: __init__.py  extractor.py  grouper.py  grouping_prompts.py  models.py  prompts.py
src/graph/: __init__.py  wrapper.py
src/ingestion/: __init__.py  base.py  github_ingester.py  local_ingester.py
src/output/: __init__.py  graph_visualizer.py  html_reporter.py  json_exporter.py
templates/: report.html.j2
tests/: test_cli.py
tests/extraction/: test_extractor.py  test_grouper.py  test_grouping_prompts.py  test_models.py  test_prompts.py
tests/graph/: test_wrapper.py
tests/ingestion/: test_ingestion.py
tests/output/: test_graph_visualizer.py  test_html_reporter.py  test_json_exporter.py
