[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digital-features-extractor"
version = "0.1.0"
description = "Extract Digital Features from a codebase using LLM + knowledge graph"
requires-python = ">=3.11"
dependencies = [
    "graphify>=0.5.0",
    "networkx>=3.3",
    "leidenalg>=0.10.2",
    "igraph>=0.11.6",
    "pydantic>=2.7",
    "openai>=1.30",
    "anthropic>=0.28",
    "jinja2>=3.1",
    "pyvis>=0.3.2",
    "click>=8.1",
    "gitpython>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
dfe = "src.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
